--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
 </head>
 <body>
 	
-	<h2>GitHub Full Class</h2>
+	<div class="main-h2">
+		<h2>GitHub Full Class</h2>
+	</div>
+
+	<div class="userForm">
+			<h2>Registation Form</h2>
+		<form action="#">
+			<label for="Fname">Enter First Name : </label><br>
+			<input type="text" name='Fname' id='Fname'><br><br>
+
+			<label for="Lname">Enter First Name : </label><br>
+			<input type="text" name='Lname' id='Lname'><br><br>
+    		
+			<label for="email">Email Address : </label><br>
+			<input type="email" name="email" id="email"><br><br>
+
+			<label for="phone">Phone : </label><br>
+			<input type="text" name="phone" id="phone"><br><br>
+
+			<input type="submit" value="Submit">
+
+		</form>
+	</div>
 
 	<script src="js/script.js"></script>
 </body>
