--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 	</div>
 	<!-- Form is end here  -->
 
+	<div class="box-1">
+		<h2>Social Network</h2>
+		<p>Social Network, dolor sit amet, consectetur adipisicing elit. Quo provident eaque nesciunt. Natus, aut. Iusto id labore earum recusandae inventore, natus facilis hic exercitationem totam nostrum soluta. Delectus, quas, corrupti?</p>
+		<button>Submit</button>
+	</div>
+
 	<script src="js/script.js"></script>
 </body>
 </html>
