new updated virstion - 1.1

--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
 		<button>Submit</button>
 	</div>
 
+	<div class="box-2">
+		<h2>Social Message</h2>
+		<p>Social Message, dolor sit amet, consectetur adipisicing elit. Quo provident eaque nesciunt. Natus, aut. Iusto id labore earum recusandae inventore, natus facilis hic exercitationem totam nostrum soluta. Delectus, quas, corrupti?</p>
+		<button>Submit</button>
+	</div>
+
+	<div class="box-3">
+		<h2>Social Contract</h2>
+		<p>Social contract, dolor sit amet, consectetur adipisicing elit. Quo provident eaque nesciunt. Natus, aut. Iusto id labore earum recusandae inventore, natus facilis hic exercitationem totam nostrum soluta. Delectus, quas, corrupti?</p>
+		<button>Submit</button>
+	</div>
+
 	<script src="js/script.js"></script>
 </body>
 </html>
