updated virsion with readme file virsion - 1.5

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		<p>Social Message, dolor sit amet, consectetur adipisicing elit. Quo provident eaque nesciunt. Natus, aut. Iusto id labore earum recusandae inventore, natus facilis hic exercitationem totam nostrum soluta. Delectus, quas, corrupti?</p>
 		<button>Submit</button>
 	</div>
+	<!-- box-2 end here javaScript -->
 
 	<div class="box-3">
 		<h2>Social Contract</h2>
